src/test/ui/enum-discriminant/issue-70453-generics-in-discr-ice-2.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-70453-generics-in-discr-ice-2.rs:9:35
   |
LL |     Some(T) = std::mem::size_of::<T>(),
   |                                   ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: failed to evaluate the given constant
  --> $DIR/issue-70453-generics-in-discr-ice-2.rs:9:15
   |
LL |     Some(T) = std::mem::size_of::<T>(),
   |               ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

